--- a/Spring/Photostagram/src/main/resources/static/css/post_modal.css
+++ b/Spring/Photostagram/src/main/resources/static/css/post_modal.css
@@ -190,7 +190,7 @@
     position: relative;
 }
 
-#input_image_post > .beforeBtn{
+#input_image_post > .beforeBtnPost{
   position: fixed;
   top: 45%;
   left: 9px;
@@ -201,8 +201,10 @@
   color:white;
   border: none;
   visibility: hidden;
+  cursor:auto;
+  z-index:20;
 }
-#input_image_post > .afterBtn{
+#input_image_post > .afterBtnPost{
   position: fixed;
   top: 45%;
   right: 305px;
@@ -212,7 +214,8 @@
   border-radius:50%;
   color:white;
   border: none;
-  visibility: hidden;
+  visibility: visible;
+  z-index:20;
 }
 
 .feed_content_textarea_post{
@@ -225,5 +228,84 @@
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+.tagModalPost{
+    width:338px;
+    height:226px;
+    z-index:18;
+    background: white;
+    position:absolute;
+    display:none;
+    border-radius:15px;
+    box-shadow:3px 3px 3px 3px #d0d0d0;
+}
+
+.tagModalPost > div:nth-child(1){
+    width: 20px;
+    height: 15px;
+    background: white;
+    transform: rotate(90deg);
+    position: absolute;
+    left: 18px;
+    top: -5px;
+    clip-path: path( 'M8 0C8 4 9.32406e-08 7.819 1.25211e-07 10.5C1.57188e-07 13.1815 8 17.0005 8 21L8 0Z' );
+}
+
+.tagUserListPost{
+    overflow-y:scroll;
+    width:338px;
+    height:180px;
+}
+
+.tagSearchPost {
+    padding:10px 8px;
+    border-bottom:1px solid black;
+    width:338px;
+    height:46px;
+}
+
+.tagSearchPost > div{
+    float:left;
+}
+
+.tagSearchPost > div > input{
+    border: none;
+}
+
+.tagSearchesPost{
+    padding: 5px;
+    display:flex;
+    width:321px;
+    height:62px;
+}
+
+.tagSearchUserPost{
+    display:flex;
+}
+
+.tagSearchUserPost > img{
+    width:46px;
+    height:46px;
+    border-radius:50%;
+    object-fit: cover;
+}
+
+.tagUserInfoPost{
+    padding:8px;
+}
+
+.tagUserInfoPost > div{
+    text-align: left;
+    font-size:14px;
+    color:#000000;
+    font-weight:bold;
+}
+.tagUserInfoPost > span{
+    overflow: hidden;
+    text-align: left;
+    text-overflow: ellipsis;
+    font-size:14px;
+    color:#737373;
 }
 
