--- a/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
@@ -97,7 +97,7 @@
                 </button>
 
                 <button>
-                    <a th:href="@{/explore/index}">
+                    <a th:href="@{/board/quest}">
                         <i class="uil uil-compass"></i>
                         <span>탐색 탭</span>
                     </a>
