--- a/Spring/Photostagram/src/main/resources/templates/fragments/my/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/my/_modal.html
@@ -112,29 +112,9 @@
                 </div>
                 <div>
                     <h2>시작 날짜</h2>
-                    <select name="startYear">
-                        <option value="2016">2016</option>
-                        <option>2017</option>
-                        <option>2018</option>
-                        <option>2019</option>
-                        <option>2020</option>
-                        <option>2021</option>
-                        <option>2022</option>
-                        <option>2023</option>
+                    <select name="startYear" id="startYearBox">
                     </select>
-                    <select name="startMonth">
-                        <option value="1">1월</option>
-                        <option>2월</option>
-                        <option>3월</option>
-                        <option>4월</option>
-                        <option>5월</option>
-                        <option>6월</option>
-                        <option>7월</option>
-                        <option>8월</option>
-                        <option>9월</option>
-                        <option>10월</option>
-                        <option>11월</option>
-                        <option>12월</option>
+                    <select name="startMonth" id="startMonthBox">
                     </select>
                     <select name="startDay">
                         <option value="1">1</option>
@@ -143,33 +123,11 @@
                 </div>
                 <div>
                     <h2>종료 날짜</h2>
-                    <select name="endYear">
-                        <option>2016</option>
-                        <option>2017</option>
-                        <option>2018</option>
-                        <option>2019</option>
-                        <option>2020</option>
-                        <option>2021</option>
-                        <option>2022</option>
-                        <option>2023</option>
+                    <select name="endYear" id="endYearBox">
                     </select>
-                    <select name="endMonth">
-                        <option>1월</option>
-                        <option>2월</option>
-                        <option>3월</option>
-                        <option>4월</option>
-                        <option>5월</option>
-                        <option>6월</option>
-                        <option>7월</option>
-                        <option>8월</option>
-                        <option>9월</option>
-                        <option>10월</option>
-                        <option>11월</option>
-                        <option>12월</option>
+                    <select name="endMonth" id="endMonthBox">
                     </select>
                     <select name="endDay">
-                        <option>1</option>
-                        <option>2</option>
                     </select>
                 </div>
             </div>
