--- a/Spring/Photostagram/src/main/resources/templates/my/history.html
+++ b/Spring/Photostagram/src/main/resources/templates/my/history.html
@@ -74,6 +74,53 @@
         </div>
     </th:block>
 </html>
+<script th:inline="javascript">
+/*<![CDATA[*/
+$(document).ready(function(){
+    setDateSelectBox();
+});
+
+function setDateSelectBox(){
+
+	let now = new Date();
+	let now_year = now.getFullYear();       // 현재 년도
+	let now_month = now.getMonth() + 1;     // 현재 월
+	let now_day = now.getDate();            // 현재 일
+
+	let year = [[${startYear}]];            // 계정이 생성된 년도
+	let month = [[${startMonth}]];           // 계정이 생성된 월
+	let day = [[${startDay}]];              // 계정이 생성된 날
+
+	for(i = now_year; i >= 1910; i--){
+	    if (i == year){
+	        $("#startYearBox").append("<option selected>"+ i +"</option>");
+	    } else {
+	        $("#startYearBox").append("<option>"+ i +"</option>");
+	    }
+	}
+
+	for(i = now_year; i >= 1910; i--){
+        $("#endYearBox").append("<option>"+ i +"</option>");
+	}
+
+    for(i = 1; i <= 12; i++){
+    	if (i == month){
+	        $("#startMonthBox").append("<option value=" + i +" selected>"+ i + "월</option>");
+	    } else {
+	        $("#startMonthBox").append("<option value=" + i +">"+ i + "월</option>");
+	    }
+	}
+
+    for(i = 1; i <= 12; i++){
+    	if (i == now_month){
+	        $("#endMonthBox").append("<option value=" + i +" selected>"+ i + "월</option>");
+	    } else {
+	        $("#endMonthBox").append("<option value=" + i +">"+ i + "월</option>");
+	    }
+	}
+}
+/*]]*/
+</script>
 <script>
 $(function(){
     $("#goSorting").on('click', function(){
