--- a/Spring/Photostagram/src/main/resources/static/css/quest.css
+++ b/Spring/Photostagram/src/main/resources/static/css/quest.css
@@ -131,6 +131,7 @@
             display: block;
             width: 100%;
             position: relative;
+            background-color: white;
         }
 
         .content9{
@@ -138,6 +139,8 @@
             overflow: hidden;
             padding-bottom: 100%;
             position: relative;
+            width: 300px;
+            height: 300px;
         }
 
         .content10{
@@ -188,4 +191,10 @@
           position: relative;
           display: block;
           filter: drop-shadow(0 0 0.75px rgba(0,0,0,.42)) drop-shadow(0 1px 0.5px rgba(0,0,0,.18)) drop-shadow(0 2px 3px rgba(0,0,0,.2));
+        }
+
+        .content9 > img {
+            width:300px;
+            height:300px;
+            object-fit: cover;
         }
