--- a/Spring/Photostagram/src/main/resources/templates/board/post.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/post.html
@@ -8,82 +8,143 @@
 
            $('#btnComment').click(function(e){
                 e.preventDefault();
-                //alert('click!!!');
-
+                
                 var comment = $("#comment").val();
                 var user_no = [[${user.no}]];
                 var post_no = [[${post.no}]];
                 var username = [[${user.username}]];
                 var profileImg = [[${user.profileImg}]];
 
-                var jsonData = {
+                // 작성 폼의 내용이 답글인 경우
+                if(comment.startsWith("@")){
+                    let respComment_no = $("input[name=commentNo]").val()
+                    console.log("답글 달 댓글번호 : " + respComment_no) // ok
+                    let resp = comment.split(" | ")
+                    console.log("답글 의 댓글 내용 : " + resp[1]) // ok
+
+                    let comment_length = $("li.text").length; // for
+
+                    
+
+                    let jsonData = {
+                        comment: resp[1],
+                        user_no:user_no,
+                        post_no:post_no,
+                        parent:respComment_no
+                    }
+
+                    
+                    
+                    $.ajax({
+                        url:'/Photostagram/BoardRespComment',
+                        method:'POST',
+                        data:JSON.stringify(jsonData),
+                        contentType: "application/json",
+                        dataType:'json',
+                        success: function(data){
+                            let str =      "<li>"
+                                str +=          "<img class='proImg' src='/Photostagram/thumb/"+profileImg+"' onerror='this.src=/Photostagram/img/44884218_345707102882519_2446069589734326272_n.jpg'>"
+                                str +=          "<div class='reply'>"
+                                str +=       "<h1>"
+                                str +=            "<span>"+username+"</span>"
+                                str +=            ""+resp[1]+""
+                                str +=      "</h1>"
+                                str +=   "<div class='favorite'>"
+                                str +=       "<span class='comment_writeTime'>1일</span>"
+                                str +=   "좋아요"
+                                str +=   "<span class='cmt_like_count'>0</span>개"
+                                str +=   "<span class='comment_more'>답글달기</span>"
+                                str += "</div>"
+                                str += "</div>"
+                                str +="<a href='#' id='reHeart' class='reWhite'>좋아요</a>"
+                                str +="</li>"
+                                
+                            
+                                for(let i=0; i<comment_length; i++){
+
+                                    let text_cmt = $("li.text").eq(i);
+                                    console.log("text_cmt : " + text_cmt)
+                                    
+                                    if(text_cmt.attr("data-no") == respComment_no){
+                                        text_cmt.find('.reReply').append(str);
+                                    }
+                                }
+                            $("#comment").val('');
+                        }
+                    })
+                }else{
+
+                    var jsonData = {
                     "comment": comment,
                     "user_no": user_no,
                     "post_no": post_no
-                };
+                    };
+                    
+                    
 
-                console.log('jsonData : ' + JSON.stringify(jsonData));
+                    console.log('jsonData : ' + JSON.stringify(jsonData));
 
-                $.ajax({
-                    url : '/Photostagram/BoardComment',
-                    method : 'POST',
-                    data : jsonData,
-                    dataType : 'JSON',
-                    success : function(data){
-                        console.log('success data : ' + JSON.stringify(data));
+                    $.ajax({
+                        url : '/Photostagram/BoardComment',
+                        method : 'POST',
+                        data : jsonData,
+                        dataType : 'JSON',
+                        success : function(data){
+                            console.log('success data : ' + JSON.stringify(data));
 
-                        if(data.result > 0){
-                            console.log('username : ' + username);
-                            console.log('profileImg : ' + profileImg);
+                            if(data.result > 0){
+                                console.log('username : ' + username);
+                                console.log('profileImg : ' + profileImg);
 
-                            
 
-                            let tags = `<li id="text">
-                                <img class="proImg" src="/Photostagram/thumb/${profileImg}" onerror="this.src='/Photostagram/img/44884218_345707102882519_2446069589734326272_n.jpg'" alt="profile">
-                                <div class="reply">
-                                    <h1 class="comment_width"><span>${username}</span>${comment}</h1>
 
-                                    <div class="favorite">
-                                        <span class="comment_writeTime">1일</span>
-                                        좋아요
-                                        <span class="cmt_like_count">0</span>개
-                                        <span class="comment_more">답글달기</span>
+                                let tags = `<li id="text">
+                                    <img class="proImg" src="/Photostagram/thumb/${profileImg}" onerror="this.src='/Photostagram/img/44884218_345707102882519_2446069589734326272_n.jpg'" alt="profile">
+                                    <div class="reply">
+                                        <h1 class="comment_width"><span>${username}</span>${comment}</h1>
+
+                                        <div class="favorite">
+                                            <span class="comment_writeTime">1일</span>
+                                            좋아요
+                                            <span class="cmt_like_count">0</span>개
+                                            <span class="comment_more">답글달기</span>
+                                        </div>
                                     </div>
-                                </div>
-                                <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                                    <a href="#" id="reHeart" class="reWhite" data-no=${user_no}>좋아요</a>
 
-                                <div class="showReply">
-                                    
-                                    <div class="listReply reHide">
-                                        <ul class="reReply">
-                                            <li>
-                                                <img class="proImg" src="/Photostagram/img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
-                                                <div class="reply">
-                                                    <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
-                                                    <a href="#">#해시태그</a>
-                                                    <div class="comment-time">
-                                                        좋아요 <span>100</span>개 &nbsp;&nbsp;
-                                                        <a href="#">답글달기</a>
+                                    <div class="showReply">
+
+                                        <div class="listReply reHide">
+                                            <ul class="reReply">
+                                                <li>
+                                                    <img class="proImg" src="/Photostagram/img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
+                                                    <div class="reply">
+                                                        <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
+                                                        <a href="#">#해시태그</a>
+                                                        <div class="comment-time">
+                                                            좋아요 <span>100</span>개 &nbsp;&nbsp;
+                                                            <a href="#">답글달기</a>
+                                                        </div>
                                                     </div>
-                                                </div>
-                                                <a href="#" id="reHeart" class="reWhite">좋아요</a>
-                                            </li>
-                                        </ul>
+                                                    <a href="#" id="reHeart" class="reWhite">좋아요</a>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
 
-                            </li>`;
+                                </li>`;
 
-                            $('#post > .contents > ul').append(tags);
-                            $('#comment').val('');
+                                $('#post > .contents > ul').append(tags);
+                                $('#comment').val('');
 
-                        }else{
-                            alert("실패");
-
-
+                            }else{
+                                alert("실패");
+                            }
                         }
-                    }
-                });
+                    });
+                }
+
+                
             });
 
 
@@ -136,15 +197,16 @@
                     <!---->
 
                     <!-- 댓글 -->
-                    <li id="text" th:each="commentVo:${comments}" th:if="${commentVo.post_no == NowArticleNo}">
+                    <li class="text" th:each="commentVo:${comments}"
+                        th:if="${commentVo.post_no == NowArticleNo}"
+                        th:data-no="${commentVo.no}"
+                    >
                         <a th:href="@{/profile(username = ${commentVo.memberVO.username})}">
                             <img class="proImg" th:src="|@{/}thumb/${commentVo.profileImg}" onerror="this.src='/Photostagram/img/44884218_345707102882519_2446069589734326272_n.jpg'" alt="profile">
                         </a>
                         <div class="reply">
                             <h1 class="comment_width">
-<!--                                <a th:href="@{/profile(username = ${commentVo.username})}">-->
                                     <span>[[${commentVo.username}]]</span>
-<!--                                </a>-->
                                 [[${commentVo.comment}]]
                             </h1>
 
@@ -198,17 +260,14 @@
                         <a href="#" id="likeThis" class="like" th:unless="${post_like_user == null}" th:data-no="${user.no}"></a>
                         <a href="#" id="writeReply"></a>
                         <a href="#" id="share"></a>
-                        <a href="#" id="bookMark" class="remove"></a>
+                        <a href="#" id="bookMark" class="remove" th:data-no="${user.no}"></a>
                     </div>
 
-                    <div th:if="${content_like_time.like > 0}">
+                    <div>
                         <div>좋아요 <span class="like-count">[[${content_like_time.like}]]</span>개</div>
                         <div class="date" th:text="${#strings.substring(content_like_time.rdate, 5, 10)}">2월 28일</div>
                     </div>
-                    <div th:unless="${content_like_time.like > 0}">
-                        <div>가장 먼저 <a href="#">좋아요</a>를 눌러보세요</div>
-                        <div class="date" th:text="${#strings.substring(content_like_time.rdate, 5, 10)}">2월 28일</div>
-                    </div>
+                    
 
                     <div class="comment_textarea">
                         <a href="#"><i class="fa-regular fa-face-smile fa-2x"></i></a>
