--- a/Spring/Photostagram/src/main/resources/templates/board/quest.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/quest.html
@@ -9,13 +9,21 @@
                 <div class="content2">
                     <div class="content3">
                         <div class="content4">
-                            <th:block th:each="${allImg}">
-                            <div class="content5">
+                            <div class="content5" th:each="vo:${allImg}">
                                 <div class="content6">
-                                    <a class="content7" href="#">
+                                    <a class="content7" th:href="@{/board/post (no=${vo.no})}">
                                         <div class="content8">
                                             <div class="content9">
-                                                <img th:src="|@{/}thumb/${allImg.thumb}">
+                                                <th:block th:if="${#strings.contains(vo.thumb,'.mp4')}">
+                                                    <video th:src="|@{/}thumb/${vo.thumb}"></video>
+                                                    <i class="fa-solid fa-film fa-2x faIcons"></i>
+                                                </th:block>
+                                                <th:block th:unless="${#strings.contains(vo.thumb,'.mp4')}">
+                                                    <img th:src="|@{/}thumb/${vo.thumb}" alt="게시물 사진" />
+                                                    <th:block th:if="${vo.thumbs > 1}">
+                                                        <i class="fa-solid fa-images fa-2x faIcons"></i>
+                                                    </th:block>
+                                                </th:block>
                                             </div>
                                             <div class="content11"></div>
                                         </div>
@@ -25,7 +33,6 @@
                                     </a>
                                 </div>
                             </div>
-                            </th:block>
                         </div>
                     </div>
                 </div>
