--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -1154,3 +1154,8 @@ $('.myTagged').on('click', function(){
 });
 /*]]*/
 </script>
+
+<script>
+$('.myMarked').on('click', function(){
+});
+</script>
