--- a/Spring/Photostagram/src/main/resources/templates/fragments/_postModal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_postModal.html
@@ -48,7 +48,7 @@
             });
 
             $(document).on('click', '.modal_title_side_post_modify', function(){
-                let content = $('#input_content').text();
+                let content = $('#input_content_post').val();
                 let post_no = [[${post.no}]];
                 let length = $('.tag1').length;
                 let users = [];
@@ -60,8 +60,8 @@
                   users.push($('#tooltipArea_post').children().eq(i).attr('data-no'));
                   console.log("offsetx top : "+$('#tooltipArea_post').children().eq(i).position().top);
                   console.log("offsetx left : "+$('#tooltipArea_post').children().eq(i).position().left);
-                  tops.push(Math.ceil($('#tooltipArea_post').children().eq(i).position().top));
-                  lefts.push(Math.ceil($('#tooltipArea_post').children().eq(i).position().left));
+                  tops.push(Math.ceil($('#tooltipArea_post').children().eq(i).attr("data-top")));
+                  lefts.push(Math.ceil($('#tooltipArea_post').children().eq(i).attr("data-left")));
                   pages.push($('#tooltipArea_post').children().eq(i).attr('data-page'));
                 }
 
@@ -73,6 +73,12 @@
                     "lefts":lefts,
                     "pages":pages
                 };
+
+                console.log('content : '+content);
+                console.log('users : '+users);
+                console.log('tops : '+tops);
+                console.log('lefts : '+lefts);
+
 
                 $.ajax({
                     url:'/Photostagram/modifyPost',
@@ -100,6 +106,7 @@
                 $('.tagModalPost').hide();
 
                 let length = $('.tag1').length;
+                let left = x-18;
 
                 for(i=0; i<length; i++){
                     let no = $('#tooltipArea_post').children().eq(i).attr('data-no');
@@ -114,7 +121,7 @@
                     }
                 }
 
-                let tag = "<div class='tag1' data-no="+user_no+" data-page="+j+">";
+                let tag = "<div class='tag1' data-no="+user_no+" data-page="+j+" data-top="+y+" data-left="+left+">";
                     tag += "<div></div>";
                     tag += "<div class='username'><span>"+username+"</span><button>x</button></div>";
                     tag += "</div>";
@@ -126,7 +133,7 @@
 
                 tagObj.css({
                        left:x-18,
-                       top:y,
+                       top:$(window).scrollTop()+y,
                        display:'block'
                        });
 
@@ -265,7 +272,11 @@
                     </div>
                     <div id="tooltipArea_post">
                         <th:block th:each="userTag:${userTags}">
-                            <div class='tag1' th:style="'top:'+${userTag.top}+'px;left:'+${userTag.left}+'px;display:block;'" th:data-no="${userTag.tag_user_no}" th:data-page="${userTag.page}" th:if="${userTag.page == 0}">
+                            <div class='tag1' th:style="'top:'+${userTag.top}+'px;left:'+${userTag.left}+'px;display:block;'" th:data-no="${userTag.tag_user_no}" th:data-top="${userTag.top}" th:data-left="${userTag.left}" th:data-page="${userTag.page}" th:if="${userTag.page == 0}">
+                                <div></div>
+                                <div class="username"><span>[[${userTag.username}]]</span><button>x</button></div>
+                            </div>
+                            <div class='tag1' th:style="'top:'+${userTag.top}+'px;left:'+${userTag.left}+'px;display:none;'" th:data-no="${userTag.tag_user_no}" th:data-top="${userTag.top}" th:data-left="${userTag.left}" th:data-page="${userTag.page}" th:if="${userTag.page != 0}">
                                 <div></div>
                                 <div class="username"><span>[[${userTag.username}]]</span><button>x</button></div>
                             </div>
@@ -285,12 +296,7 @@
                         <span id="input_user_id" class="feed_name_txt" th:data-no="${user.no}">[[${#authentication.principal.username}]]</span>
                     </div>
                     <div style="height: 440px">
-                        <div contenteditable id="input_content" class="feed_content_textarea_post form-control col-sm-5" rows="10">
-                            [[${post.content}]]&nbsp;
-                            <th:block th:each="hash:${hashes}">
-                                #[[${hash.hashtag}]]&nbsp;
-                            </th:block>
-                        </div>
+                        <textarea id="input_content_post" class="feed_content_textarea form-control col-sm-5" rows="10" placeholder="설명을 입력하세요..."></textarea>
                     </div>
                 </div>
             </div>
