--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -116,7 +116,8 @@
                     </div>
                   </div>
                   <div class="right_icon">
-                    <div class="sprite_bookmark_outline" data-name="bookmark"></div>
+                    <div class="sprite_bookmark_outline"
+                         th:data-value="${user.no}"></div>
                   </div>
                 </div>
 
@@ -422,6 +423,7 @@
           </th:block>
         </div>
         <!-- <input type="hidden" id="page" value="1"> 왜 있는지 모름 (보류)-->
+
 
         <!-- 본인 프로필 및 정보 -->
         <div class="side_box">
